--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@
   justify-content: center;
   padding: 1%;
 }
+
+.loading {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+}
